--- a/modules/match/views/edit.phtml
+++ b/modules/match/views/edit.phtml
@@ -1,4 +1,4 @@
-<form id="edit_form">
+<form id="edit_form" action="<?php echo APP_URL . '/match/save/' ?>" method="post">
 	<fieldset>
 		<legend>Match info</legend>
 		<ul>
