Match save works.

--- a/modules/match/views/edit.phtml
+++ b/modules/match/views/edit.phtml
@@ -44,24 +44,32 @@
 			</li>
 			<li class="left">
 				<label for="venue">Venue:</label>
-				<input type="text" name="season" id="venue" />
+				<input type="text" name="venue" id="venue" />
 			</li>
 			<li class="right">
 				<label for="address">Address:</label>
 				<input type="text" name="address" id="address" />
 			</li>
 			<li class="left">
-				<label for="referee">Referee:</label>
-				<input type="text" name="referee" id="referee" />
+				<label for="referee_firstname">Ref Name:</label>
+				<input type="text" name="referee_firstname" id="referee_firstname" />
+			</li>
+            <li class="right">
+                <label for="referee_lastname">Surname:</label>
+                <input type="text" name="referee_lastname" id="referee_lastname" />
+            </li>
+			<li class="left">
+				<label for="referee_county">County:</label>
+				<input type="text" name="referee_county" id="referee_county" />
 			</li>
 			<li class="right">
-				<label for="county">County:</label>
-				<input type="text" name="county" id="county" />
+				<label for="referee_club">Club:</label>
+				<input type="text" name="referee_club" id="referee_club" />
 			</li>
-			<li class="right">
-				<label for="club">Club:</label>
-				<input type="text" name="club" id="club" />
-			</li>
+            <li class="right">
+                <label for="stage">Stage:</label>
+                <input type="text" name="stage" id="stage" />
+            </li>
 			<li class="left">
 				<input type="submit" name="save" value="Save" />
 			</li>
